2003-11-20  Fariborz Jahanian  <fjahanian@apple.com>
	    David Edelsohn  <edelsohn@gnu.org>

	* calls.c (expand_call): Allocate new temp in pass1.
	(store_one_arg): If PARALLEL, calculate excess using mode size of
	rtvec elt. 
	* expr.c (emit_push_insn): If PARALLEL, calculate offset using
	mode size of rtvec elt.
	* function.c (assign_parms): Use parm in register, if available.

2003-11-20  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/lib1funcs.asm (MOVP): Remove.
	(ADDP): Likewise.
	(CMPP): Likewise.

2003-11-20  Richard Earnshaw  <rearnsha@arm.com>

	* arm.c (use_return_insn): New argument, SIBLING.  Support returning
	with a single instruction if the stack has been decremented by 4
	and we have a frame pointer.  Update all callers.
	(output_return_instruction): Likewise.
	(arm_output_epilogue): Change argument to SIBLING.  Calculate
	really_return from the new argument.  Update all callers.
	* arm.h (USE_RETURN_INSN): Pass NULL for the sibling.
	* arm.md (sibcall_epilogue): Call use_return_insn directly, and
	pass the sibling call.
	* arm-protos.h (use_return_insn, arm_output_epilogue): Update
	prototypes.

2003-11-20  Joseph S. Myers  <jsm@polyomino.org.uk>

	* Makefile.in (extraclean): Delete.
	* configure.in (target_list): Remove extraclean.
	* configure: Regenerate.
	* doc/makefile.texi, doc/sourcebuild.texi: Update.
	* objc/Make-lang.in (objc.extraclean): Delete.

2003-11-20  Joseph S. Myers  <jsm@polyomino.org.uk>

	* Makefile.in (lang_checks): Add.
	(check-c++, check-f77, check-java, check-g++, check-g77,
	check-objc): Remove hardcoded targets.
	* doc/sourcebuild.texi: Document testsuite hooks.
	* objc/Make-lang.in (check-objc, lang_checks): Add.

2003-11-19  Scott Snyder  <snyder@fnal.gov>

	PR target/13131
	* dwarf2out.c (gen_array_type_die): DW_AT_declaration should be a
	flag, not a constant.

2003-11-19  Kelley Cook  <kcook@gcc.gnu.org>

	* config/arc/arc-protos.h: Update to C90 prototypes.
	* config/arc/arc.c: Likewise.